# railsy

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
src/: lib.rs  main.rs
