[package]
name = "railsy"
version = "0.1.1"
edition = "2021"
authors = ["Mahdy Karam"]
description = "Temporary email client in Rust"
readme = "README.md"
homepage = "https://mmkaram.github.io/posts/railsy/"
repository = "https://github.com/mmkaram/railsy/"
license = "MIT"
keywords = ["email"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
